Fix button alignment on Edit Only mode

--- a/src/app/app.less
+++ b/src/app/app.less
@@ -965,3 +965,7 @@ a.carousel-control {
 #chapterSummary {
   height: 20em;
 }
+
+#sidebarDropdown {
+  display: inline-block;
+}
